# PerplexitySearchMCP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
PRD/: Perplexity-Search-MCP.md
search_mcp/: __init__.py  perplexity_adapter.py  server.py
tests/: test_integration_perplexity.py  test_perplexity_adapter.py  test_server_tool.py
